# yolo-pose-demo

examples/pose_landmarker/android/: README.md
examples/pose_landmarker/android/app/: build.gradle
examples/pose_landmarker/android/app/src/main/cpp/: CMakeLists.txt  JumpRopeCounter.cpp  JumpRopeCounter.h  rknn_jni.cpp  跳绳算法.md
examples/pose_landmarker/android/app/src/main/java/com/google/mediapipe/examples/poselandmarker/: JumpRopeCounter.kt  MainViewModel.kt  NativeLibLoader.kt  OverlayView.kt  PoseLandmarkerHelper.kt  RknnRunner.kt
examples/pose_landmarker/android/app/src/main/java/com/google/mediapipe/examples/poselandmarker/fragment/: CameraFragment.kt  GalleryFragment.kt
examples/pose_landmarker/android/app/src/main/jni/: .gitignore  README.md  sync_rknn.sh
examples/pose_landmarker/android/app/src/main/res/layout/: info_bottom_sheet.xml
examples/pose_landmarker/android/app/src/main/res/values/: strings.xml
